tests: rewrite tests to java 11